BUG#13126: When choosing join order for join with nested joins, don't produce join orders that cannot be handled by the executioner.